// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DNoteUtils findClosestParent, parent grandchild -> domain root: main 1`] = `
Object {
  "body": "",
  "children": Array [],
  "data": Object {},
  "desc": "",
  "fname": "baz",
  "parent": "root",
  "stub": false,
  "title": "baz",
  "type": "note",
}
`;

exports[`DNoteUtils findClosestParent, parent grandchild -> parent: main 1`] = `
Object {
  "body": "",
  "children": Array [],
  "data": Object {},
  "desc": "",
  "fname": "foo.one",
  "parent": "foo",
  "stub": false,
  "title": "foo.one",
  "type": "note",
}
`;

exports[`DNoteUtils findClosestParent, parent grandchild -> root: main 1`] = `
Object {
  "body": "",
  "children": Array [
    "foo",
  ],
  "data": Object {},
  "desc": "",
  "fname": "root",
  "parent": "root",
  "stub": false,
  "title": "root",
  "type": "note",
}
`;

exports[`NoteUtils createStubNotes, root -> bar.one: barChild 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "bar.one",
    "parent": "bar",
    "stub": false,
    "title": "bar.one",
    "type": "note",
  },
]
`;

exports[`schema domainRoot at child: fooChild_body 1`] = `
"\`\`\`
-
    id: foo.child
    title: foo.child
    desc: \\"\\"
    children: [foo.grandchild]
    parent: foo.root
    data: {}
    fname: foo.child
-
    id: foo.grandchild
    title: foo.grandchild
    desc: \\"\\"
    children: []
    parent: foo.child
    data: {}
    fname: foo.grandchild

\`\`\`"
`;

exports[`schema domainRoot at root: foo_body 1`] = `
"\`\`\`
-
    id: foo.root
    title: foo.root
    desc: \\"\\"
    children: [foo.child]
    parent: root
    data: {}
    fname: foo.root
-
    id: foo.child
    title: foo.child
    desc: \\"\\"
    children: [foo.grandchild]
    parent: foo.root
    data: {}
    fname: foo.child
-
    id: foo.grandchild
    title: foo.grandchild
    desc: \\"\\"
    children: []
    parent: foo.child
    data: {}
    fname: foo.grandchild

\`\`\`"
`;
